😬🐀 Checkpoint ./views/transaction/index.pug:15927824/117 ./db.json:15927824/31 ./routes/transaction.route.js:15927824/71 ./controllers/transaction.controller.js:15927824/182

--- a/views/transaction/index.pug
+++ b/views/transaction/index.pug
@@ -14,5 +14,7 @@ ul
       span Book Id:
       span &nbsp;
       span= item.bookId
+      br
+      a(href="/transactions/" + item.id + "/complete") Hoàn thành
       
       
