--- a/views/transaction/index.pug
+++ b/views/transaction/index.pug
@@ -14,7 +14,12 @@ ul
       span Book Id:
       span &nbsp;
       span= item.bookId
+      br 
+      span Complete:
+      span &nbsp;
+      span= item.isComplete
       br
       a(href="/transactions/" + item.id + "/complete") Hoàn thành
+      
       
       
