👔👟 Checkpoint ./views/layouts/common.pug:15927824/1265 ./views/book.pug:15927824/294 ./views/users/index.pug:15927824/134

--- a/views/book.pug
+++ b/views/book.pug
@@ -1,14 +1,18 @@
-h1 Book List
+extends ./layouts/common
 
-a(href="/books/add") Thêm sách
+block content
+  .container.mt-5
+    h1 Book List
 
-ul
-  each item in books
-    li
-      span= item.title
-      span &nbsp;
-      a(href="/books/" + item.id + "/delete") Xóa
-      span &nbsp;
-      a(href="/books/" + item.id + "/update") Update
+    a(href="/books/add") Thêm sách
+
+    ul
+      each item in books
+        li
+          span= item.title
+          span &nbsp;
+          a(href="/books/" + item.id + "/delete") Xóa
+          span &nbsp;
+          a(href="/books/" + item.id + "/update") Update
     
       
