--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,12 +1,15 @@
-h1 User List
+extends ./layouts/common
 
-ul
-  each item in users
-    li
-      span= item.name
-      span &nbsp;
-      a(href="/users/" + item.id + "/delete") Xóa
-      span &nbsp;
-      a(href="/users/" + item.id + "/update") Update
+block content
+  h1 User List
+
+  ul
+    each item in users
+      li
+        span= item.name
+        span &nbsp;
+        a(href="/users/" + item.id + "/delete") Xóa
+        span &nbsp;
+        a(href="/users/" + item.id + "/update") Update
     
       
