🏜👛 Checkpoint ./views/users/index.pug:15927824/35 ./views/transaction/index.pug:15927824/320 ./controllers/transaction.controller.js:15927824/24 ./views/book.pug:15927824/182 ./views/users/update.pug:15927824/16 ./views/users/add.pug:15927824/16 ./views/add.pug:15927824/27 ./views/update.pug:15927824/116 ./views/layouts/common.pug:15927824/58

--- a/views/add.pug
+++ b/views/add.pug
@@ -1,6 +1,6 @@
 h1 Add Book 
 
-form(action="/books/add", method="POST")
+form.form-group(action="/books/add", method="POST")
   div
     label Title
     span &nbsp;
@@ -11,4 +11,4 @@ form(action="/books/add", method="POST")
     span &nbsp;
     input(type="text", name="description")
     
-  button Add
+  button.btn.btn-primary Add
