--- a/views/users/add.pug
+++ b/views/users/add.pug
@@ -6,4 +6,4 @@ form(action="/users/add", method="POST")
     span &nbsp;
     input(type="text", name="name")
     
-  button Add
+  button.btn.btn-primary Add
