--- a/views/users/update.pug
+++ b/views/users/update.pug
@@ -6,4 +6,4 @@ form(action="/users/" + id + "/update", method="POST")
     span &nbsp;
     input(type="text", name="newName")
     
-  button Update
+  button.btn.btn-primary Update
