--- a/views/book.pug
+++ b/views/book.pug
@@ -1,18 +1,17 @@
 extends ./layouts/common
 
 block content
-  .container.mt-5
-    h1 Book List
+  h1 Book List
 
-    a(href="/books/add") Thêm sách
+  a(href="/books/add") Thêm sách
 
-    ul
-      each item in books
-        li
-          span= item.title
-          span &nbsp;
-          a(href="/books/" + item.id + "/delete") Xóa
-          span &nbsp;
-          a(href="/books/" + item.id + "/update") Update
+  ul
+    each item in books
+      li
+        span= item.title
+        span &nbsp;
+        a.btn.btn-primary(href="/books/" + item.id + "/delete") Xóa
+        span &nbsp;
+        a.btn.btn-primary(href="/books/" + item.id + "/update") Update
     
       
