--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -11,4 +11,7 @@ html
           a.nav-item.nav-link.active(href='#') Users 
           a.nav-item.nav-link(href='#') Books
           a.nav-item.nav-link(href='#') Transactions
-    block content
+    
+    .container.mt-4
+      block content
+    
