--- a/views/update.pug
+++ b/views/update.pug
@@ -6,4 +6,4 @@ form(action="/books/" + id + "/update", method="POST")
     span &nbsp;
     input(type="text", name="newTitle")
     
-  button Update
+  button.btn.btn-primary Update
