💠🌾 Checkpoint ./views/add.pug:15927824/618 ./views/update.pug:15927824/582 ./views/book.pug:15927824/6 ./views/users/add.pug:15927824/1424 ./controllers/user.controller.js:15927824/8

--- a/views/add.pug
+++ b/views/add.pug
@@ -1,14 +1,15 @@
-h1 Add Book 
+extends ./layouts/common
 
-form.form-group(action="/books/add", method="POST")
-  div
-    label Title
-    span &nbsp;
-    input(type="text", name="title")
-    
-  div
-    label Description
-    span &nbsp;
-    input(type="text", name="description")
-    
-  button.btn.btn-primary Add
+block content
+  h1 Add Book 
+
+  form(action="/books/add", method="POST")
+    .form-group
+      label(for='exampleInputEmail1') Title
+      input#exampleInputEmail1.form-control(type='text')
+      
+    .form-group
+      label(for='exampleInputPassword1') Description
+      input#exampleInputPassword1.form-control(type='text')
+      
+    button.btn.btn-primary(type='submit') Add
