--- a/views/users/add.pug
+++ b/views/users/add.pug
@@ -1,9 +1,11 @@
-h1 Add User
+extends ../layouts/common
 
-form(action="/users/add", method="POST")
-  div
-    label Name
-    span &nbsp;
-    input(type="text", name="name")
-    
-  button.btn.btn-primary Add
+block content  
+  h1 Add User
+
+  form(action="/users/add", method="POST")
+    .form-group
+      label(for='name') Name
+      input#name.form-control(type='text')
+
+    button.btn.btn-primary Add
