🏂🐫 Checkpoint ./views/users/add.pug:15927824/17 ./views/add.pug:15927824/34 ./views/update.pug:15927824/147 ./controllers/user.controller.js:15927824/6 ./views/users/update.pug:15927824/742 ./views/transaction/create.pug:15927824/1233

--- a/views/add.pug
+++ b/views/add.pug
@@ -6,10 +6,10 @@ block content
   form(action="/books/add", method="POST")
     .form-group
       label(for='exampleInputEmail1') Title
-      input#exampleInputEmail1.form-control(type='text')
+      input#exampleInputEmail1.form-control(type='text', name="title")
       
     .form-group
       label(for='exampleInputPassword1') Description
-      input#exampleInputPassword1.form-control(type='text')
+      input#exampleInputPassword1.form-control(type='text', name='description')
       
     button.btn.btn-primary(type='submit') Add
