--- a/views/users/add.pug
+++ b/views/users/add.pug
@@ -6,6 +6,6 @@ block content
   form(action="/users/add", method="POST")
     .form-group
       label(for='name') Name
-      input#name.form-control(type='text')
+      input#name.form-control(type='text', name='name')
 
     button.btn.btn-primary Add
