--- a/views/transaction/create.pug
+++ b/views/transaction/create.pug
@@ -1,22 +1,25 @@
-h1 Create
+extends ../layouts/common
 
-form(action="/transactions/create", method="POST")
-  label User
-  span &nbsp;
-  select
-    option Hong
-  
-  span &nbsp;
-  button Create
-  
-form(action="/transactions/create", method="POST")
-  label Book
-  span &nbsp;
-  select
-    option Conan
-  
-  span &nbsp;
-  button Create
+block content   
+ h1 Create
+
+  form(action="/transactions/create", method="POST")
+    .input-group.mb-3
+      .input-group-prepend
+        label.input-group-text(for='inputGroupSelect01') Options
+      select#inputGroupSelect01.custom-select
+        option(value='1') Linh
+        
+    button.btn.btn-primary Create
+
+  form(action="/transactions/create", method="POST")
+    span Book
+    span &nbsp;
+    select
+      option Conan
+
+    span &nbsp;
+    button.btn.btn-primary Create
 
  
 
