👹⛳️ Checkpoint ./public/custom.css:15927824/31

--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -1,7 +1,8 @@
 html
   head
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
-    link(rel="shortcut icon" type="image/png" href="https://cdn.glitch.com/7623abb5-834f-485d-8ee8-17097f6a6d0c%2Fanh64.png?v=1589092694742)
+    link(rel="stylesheet" href="/custom.css")
+    link(rel="shortcut icon" type="image/png" href="https://cdn.glitch.com/7623abb5-834f-485d-8ee8-17097f6a6d0c%2Fanh64.png?v=1589092694742")
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-light
       a.navbar-brand(href='#') CodersX
