🍢👍 Checkpoint ./controllers/user.controller.js:15927824/169 ./views/users/add.pug:15927824/44

--- a/views/transaction/index.pug
+++ b/views/transaction/index.pug
@@ -3,6 +3,9 @@ extends ../layouts/common
 block content 
   h1 Transactions
 
+  if err
+    .alert.alert-danger= err 
+    
   ul
     each item in transactions
       li
