--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,2 +1,17 @@
-h1 Login
+extends ../layouts/common
 
+block content
+  h1 Login
+  
+  if errs
+    each err in errs
+      .alert.alert-danger= err
+  
+  form(method="POST")
+  .form-group
+    label(for='name') Name
+    input#name.form-control(type='text', name="name", value= value ? value.name : "")
+  .form-group
+    label(for='exampleInputPassword1') Password
+    input#exampleInputPassword1.form-control(type='password', name="password", value= value ? value.password : "")
+  button.btn.btn-primary(type='submit') Login
