🙈🔦 Checkpoint ./views/auth/login.pug:15927824/134 ./db.json:15927824/65 ./controllers/auth.controller.js:15927824/427

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -9,9 +9,9 @@ block content
   
   form(method="POST")
   .form-group
-    label(for='name') Name
-    input#name.form-control(type='text', name="name", value= value ? value.name : "")
+    label(for='email') Eamil
+    input#email.form-control(type='text', name="email")
   .form-group
     label(for='exampleInputPassword1') Password
-    input#exampleInputPassword1.form-control(type='password', name="password", value= value ? value.password : "")
+    input#exampleInputPassword1.form-control(type='password', name="password")
   button.btn.btn-primary(type='submit') Login
