🐿☂️ Checkpoint ./views/transaction/index.pug:15927824/828

--- a/views/transaction/index.pug
+++ b/views/transaction/index.pug
@@ -8,10 +8,11 @@ block content
     
   ul
     each item in transactions
-      li
+      if !item.isAdmin
+        li
         span Id:
         span &nbsp;
-        span= item.id
+        span=  item.id
         br
         span User Id:
         span &nbsp;
