--- a/views/transaction/index.pug
+++ b/views/transaction/index.pug
@@ -5,16 +5,17 @@ block content
 
   if err
     .alert.alert-danger= err 
-    
-  ul
-    each item in transactions
-      if !item.isAdmin
-        .card(style='width: 18rem;')
-          .card-body
-            h5.card-title Id
-            p.card-text User ID:
-            p.card-text Book ID:
-            a.btn.btn-primary(href='#') Ho&agrave;n th&agrave;nh
-
+  
+  each item in transactions
+    if !item.isAdmin
+      .card.m-auto(style='width: 18rem;')
+        .card-body
+          h5.card-title= 'Id: ' + item.id
+          p.card-text= 'User ID: ' + item.userId
+          p.card-text= 'Book ID: ' + item.bookId
+          p.card-text= 'Complete: ' + item.isComplete
+          a.btn.btn-primary(href="/transactions/" + item.id + "/complete") Hoàn thành
+      
+      
       
       
