🎐🕷 Checkpoint ./db.json:15927824/49 ./views/layouts/common.pug:15927824/28

--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -10,9 +10,9 @@ html
         span.navbar-toggler-icon
       #navbarNavAltMarkup.collapse.navbar-collapse
         .navbar-nav
-          a.nav-item.nav-link.active(href='#') Users 
-          a.nav-item.nav-link(href='#') Books
-          a.nav-item.nav-link(href='#') Transactions
+          a.nav-item.nav-link.active(href='/users') Users 
+          a.nav-item.nav-link(href='/books') Books
+          a.nav-item.nav-link(href='/transactions') Transactions
     
     .container.mt-4
       block content
