💂🐧 Checkpoint ./views/users/profile.pug:15927824/371 ./routes/user.route.js:15927824/83 ./controllers/user.controller.js:15927824/109 ./views/users/avatar.pug:15927824/726

--- a/views/users/avatar.pug
+++ b/views/users/avatar.pug
@@ -1,16 +1,14 @@
 extends ../layouts/common
 
 block content 
-  h1.mb-5 Update Profile
+  h1.mb-5 Upload Avatar
   
   div.w-100.text-center.mb-3
     img(src="https://stafforgserv.com.au/wp-content/uploads/2018/09/user-img.png", style="width: 120")
 
   form(method="POST", enctype="multipart/form-data")
       .form-group
-        label(for='name') Name
-        input#name.form-control(type='text', name='name')
+        label(for='name') Avatar
+        input#name.form-control(type='file', name='avatar')
       
-      div.mb-2
-        a.btn.btn-primary(href="/users/profile/avatar") Update Avatar
-      button.btn.btn-primary Update
+      button.btn.btn-primary Submit
