--- a/views/users/avatar.pug
+++ b/views/users/avatar.pug
@@ -3,12 +3,12 @@ extends ../layouts/common
 block content 
   h1.mb-5 Upload Avatar
   
-  div.w-100.text-center.mb-3
+  div.w-100.mb-3
     img(src="https://stafforgserv.com.au/wp-content/uploads/2018/09/user-img.png", style="width: 120")
 
   form(method="POST", enctype="multipart/form-data")
       .form-group
         label(for='name') Avatar
-        input#name.form-control(type='file', name='avatar')
+        input#name.form-control-file(type='file', name='avatar')
       
       button.btn.btn-primary Submit
