--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -6,7 +6,7 @@ block content
   div.w-100.text-center.mb-3
     img(src="https://stafforgserv.com.au/wp-content/uploads/2018/09/user-img.png", style="width: 120")
 
-  form(method="POST", enctype="multipart/form-data")
+  form(method="POST")
       .form-group
         label(for='name') Name
         input#name.form-control(type='text', name='name')
