🚀🙎 Checkpoint ./routes/user.route.js:15927824/179 ./CODE_OF_CONDUCT.md:15927824/6748

--- a/views/users/avatar.pug
+++ b/views/users/avatar.pug
@@ -9,6 +9,6 @@ block content
   form(method="POST", enctype="multipart/form-data")
       .form-group
         label(for='name') Avatar
-        input#name.form-control-file(type='file', name='avatar')
+        input#name.form-control-file(type='file', name='avatarUrl')
       
       button.btn.btn-primary Submit
