🍘👄 Checkpoint ./server.js:15927824/3 ./views/users/avatar.pug:15927824/201 ./controllers/user.controller.js:15927824/52 ./middleware/auth.middleware.js:15927824/134

--- a/views/users/avatar.pug
+++ b/views/users/avatar.pug
@@ -4,7 +4,7 @@ block content
   h1.mb-5 Upload Avatar
   
   div.w-100.mb-3
-    img(src="https://stafforgserv.com.au/wp-content/uploads/2018/09/user-img.png", style="width: 120")
+    img.rounded-circle(src=user.avatar, style="width: 120")
 
   form(method="POST", enctype="multipart/form-data")
       .form-group
