--- a/views/users/avatar.pug
+++ b/views/users/avatar.pug
@@ -4,11 +4,11 @@ block content
   h1.mb-5 Upload Avatar
   
   div.w-100.mb-3
-    img.rounded-circle(src=user.avatar, style="width: 120")
+    img.rounded-circle(src=user.avatarUrl, style="width: 120")
 
   form(method="POST", enctype="multipart/form-data")
       .form-group
-        label(for='name') Avatar
-        input#name.form-control-file(type='file', name='avatarUrl')
+        label(for='avatar') Avatar
+        input#avatar.form-control-file(type='file', name='avatarUrl')
       
       button.btn.btn-primary Submit
