--- a/views/users/avatar.pug
+++ b/views/users/avatar.pug
@@ -5,6 +5,8 @@ block content
   
   div.w-100.mb-3
     img.rounded-circle(src=user.avatarUrl, style="width: 120")
+    div.w-120
+      img.rounded-circle(src="https://21-file-uploadd.glitch.me/4cccc203686b652401029524e8a3d597", style="width: 120")
 
   form(method="POST", enctype="multipart/form-data")
       .form-group
