🚘💅 Checkpoint ./views/users/avatar.pug:15927824/200 ./controllers/user.controller.js:15927824/254

--- a/views/users/avatar.pug
+++ b/views/users/avatar.pug
@@ -4,9 +4,7 @@ block content
   h1.mb-5 Upload Avatar
   
   div.w-100.mb-3
-    img.rounded-circle(src=user.avatarUrl, style="width: 120")
-    div.w-120
-      img.rounded-circle(src="https://21-file-uploadd.glitch.me/4cccc203686b652401029524e8a3d597", style="width: 120")
+    img.rounded-circle(src=user.avatarUrl, style="width: 120; height: 120")
 
   form(method="POST", enctype="multipart/form-data")
       .form-group
