💠🎲 Checkpoint ./server.js:15927824/26 ./db.json:15927824/379 ./.glitch-assets:15927824/981 ./views/book.pug:15927824/331

--- a/views/book.pug
+++ b/views/book.pug
@@ -13,5 +13,15 @@ block content
         a.btn.btn-primary(href="/books/" + item.id + "/delete") Xóa
         span &nbsp;
         a.btn.btn-primary(href="/books/" + item.id + "/update") Update
+  
+   .row
+    each product in products
+      .col-sm-6.col-md-4.col-lg-3
+        .card.mb-3
+          img.card-img-top(src=product.image)
+          .card-body
+            h5.card-title= product.name
+            p.card-text= product.description
+            a.btn.btn-primary(href='/cart/add/' + product.id) Add to cart
     
       
