🤘🏝 Checkpoint ./views/book.pug:15927824/527 ./views/add.pug:15927824/103 ./routes/book.route.js:15927824/127 ./controllers/book.controller.js:15927824/677

--- a/views/add.pug
+++ b/views/add.pug
@@ -11,5 +11,9 @@ block content
     .form-group
       label(for='exampleInputPassword1') Description
       input#exampleInputPassword1.form-control(type='text', name='description')
+    
+    .form-group
+      label Image
+      input.form-control-file(type="file", name="coverUrl")
       
     button.btn.btn-primary(type='submit') Add
