--- a/views/book.pug
+++ b/views/book.pug
@@ -5,23 +5,15 @@ block content
 
   a(href="/books/add") Thêm sách
 
-  ul
+  .row.mt-3
     each item in books
-      li.m-2
-        span= item.title
-        span &nbsp;
-        a.btn.btn-primary(href="/books/" + item.id + "/delete") Xóa
-        span &nbsp;
-        a.btn.btn-primary(href="/books/" + item.id + "/update") Update
-  
-   .row
-    each product in products
       .col-sm-6.col-md-4.col-lg-3
         .card.mb-3
-          img.card-img-top(src=product.image)
+          img.card-img-top(src=item.coverUrl)
           .card-body
-            h5.card-title= product.name
-            p.card-text= product.description
-            a.btn.btn-primary(href='/cart/add/' + product.id) Add to cart
+            h5.card-title= item.title
+            p.card-text= item.description
+            a.btn.btn-primary.mr-2(href='#') Xóa 
+            a.btn.btn-primary.mr-2(href='#') Update
     
       
