⛪️🏦 Checkpoint ./controllers/book.controller.js:15927824/911 ./views/add.pug:15927824/31 ./views/book.pug:15927824/105

--- a/views/book.pug
+++ b/views/book.pug
@@ -15,5 +15,6 @@ block content
             p.card-text= item.description
             a.btn.btn-primary.mr-2(href='#') Xóa 
             a.btn.btn-primary.mr-2(href='#') Update
+            a.btn.btn-primary.mt-2(href='#') Thuê sách
     
       
