--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -13,6 +13,7 @@ html
           a.nav-item.nav-link.active(href='/users') Users 
           a.nav-item.nav-link(href='/books') Books
           a.nav-item.nav-link(href='/transactions') Transactions
+          a.nav-item.nav-link(href='#') Cart
     
     .container.mt-4
       block content
