🌈🦂 Checkpoint ./views/book.pug:15927824/277

--- a/views/book.pug
+++ b/views/book.pug
@@ -15,6 +15,7 @@ block content
             p.card-text= item.description
             a.btn.btn-primary.mr-2(href='/books/' + item.id + '/delete') Xóa 
             a.btn.btn-primary.mr-2(href='/books/' + item.id + '/update') Update
-            a.btn.btn-primary.mt-2(href='/books/cart/add/' + item.id) Thuê sách
-    
+            a.btn.btn-primary.mt-2(href='/books/cart/add/' + item.id) Thêm vào giỏ
+            a.btn.btn-primary.mt-2(href='/books/cart/transaction/' + item.id) Thuê sách
+  
       
