⛪️🙅 Checkpoint ./controllers/user.controller.js:15927824/246 ./views/users/index.pug:15927824/2

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -8,8 +8,8 @@ block content
       li.m-3
         span= item.name
         span &nbsp;
-        a.btn.btn-primary(href="/users/" + item.id + "/delete") Xóa
+        a.btn.btn-primary(href="/users/" + item._id + "/delete") Xóa
         span &nbsp;
-        a.btn.btn-primary(href="/users/" + item.id + "/update") Update
+        a.btn.btn-primary(href="/users/" + item._id + "/update") Update
     
       
