--- a/views/transaction/index.pug
+++ b/views/transaction/index.pug
@@ -10,11 +10,11 @@ block content
     if item.userId === userId
       .card.m-auto(style='width: 18rem;')
         .card-body
-          h5.card-title= 'Id: ' + item.id
+          h5.card-title= 'Id: ' + item._id
           p.card-text= 'User ID: ' + item.userId
           p.card-text= 'Book ID: ' + item.bookId
           p.card-text= 'Complete: ' + item.isComplete
-          a.btn.btn-primary(href="/transactions/" + item.id + "/complete") Hoàn thành
+          a.btn.btn-primary(href="/transactions/" + item._id + "/complete") Hoàn thành
       
       
       
